[gd_scene load_steps=4 format=3 uid="uid://cqgwwhf6ajm1o"]

[ext_resource type="Script" path="res://scripts/ItemSpawner.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Item.tscn" id="2"]

[sub_resource type="ParticleProcessMaterial" id="1"]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 52.0
initial_velocity_max = 52.0
scale_min = 4.0
scale_max = 7.0
color = Color(0, 0.501961, 0.988235, 1)
hue_variation_max = 0.51

[node name="ItemSpawner" type="Marker2D"]
script = ExtResource("1")
itemScene = ExtResource("2")

[node name="container" type="Node" parent="."]

[node name="totalTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="particlesTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 250
process_material = SubResource("1")
lifetime = 2.0

[connection signal="timeout" from="totalTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="particlesTimer" to="." method="_on_particlesTimer_timeout"]
